samples/_failures_safe/1761688547_830bb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0110f02c.c: In function ‘main’:
./samples/SAFE/__tmp_0110f02c.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
